--- a/style.css
+++ b/style.css
@@ -1,10 +1,40 @@
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+}
+
+nav {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+nav #logoNav {
+  width: 10vw;
+}
+nav #searchFunction {
+  border: 1px solid black;
+}
+
+.fontawesomeIcon {
+  font-family: font;
 }
 
 #banner {
   background-color: red;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 #banner p {
   color: white;
+}
+
+.footer {
+  background-color: #f2f2f2;
+}
+
+.footerListOne,
+.footerListTwo,
+.footerListThree {
+  list-style-type: none;
 }/*# sourceMappingURL=style.css.map */
