--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,46 @@
 body {
     font-family: "Montserrat",sans-serif;
+    margin: 0;
+}
+
+nav {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+
+    #logoNav {
+        width: 10vw;
+    }
+
+    #searchFunction {
+        border: 1px solid black;
+    }
+}
+
+.fontawesomeIcon {
+    font-family: font;
 }
 
 #banner {
     background-color: red;
+    display:flex;
+    align-content: center;
+    justify-content: center;
 
     p {
         color: white;
     }
 }
 
+.footerWrapper{
+    
+}
+.footer{
+    background-color:#f2f2f2;
+}.footerListOne,
+.footerListTwo,
+.footerListThree
+{
+    list-style-type: none;
+    
+}
