--- a/style.scss
+++ b/style.scss
@@ -12,13 +12,13 @@ nav {
         width: 10vw;
     }
 
-    #searchFunction {
+    #searchContainer {
         border: 1px solid black;
     }
 }
 
 .fontawesomeIcon {
-    font-family: font;
+    font-family: ;
 }
 
 #banner {
@@ -32,11 +32,14 @@ nav {
     }
 }
 
-.footerWrapper{
-    
+.footerWrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .footer{
     background-color:#f2f2f2;
+   
 }.footerListOne,
 .footerListTwo,
 .footerListThree
