--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -38,7 +37,8 @@ nav #searchFunction {
 .footerListTwo,
 .footerListThree {
   list-style-type: none;
-=======
+}
+
 #bookSection {
   display: flex;
   flex-direction: row;
@@ -51,5 +51,4 @@ nav #searchFunction {
 }
 #bookSection .productcard img {
   max-width: 200px;
-
 }/*# sourceMappingURL=style.css.map */
