--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ nav #searchFunction {
   list-style-type: none;
 }
 
+.booksWrap {
+  width: 70%;
+  padding: 16px 80px 16px 360px;
+}
+
 #bookSection {
   display: flex;
   flex-direction: row;
