--- a/style.scss
+++ b/style.scss
@@ -55,8 +55,9 @@ nav {
     flex-direction: column;
     align-items: center;
 
+}.divFooterFour{
+    margin: 20px;
 }
-
 #bookSection {
     display:flex;
     flex-direction: row;
