--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,16 @@ nav {
 
     #searchContainer {
         border: 1px solid black;
+
+        button , select , {
+            height: 100%;
+        }
+        input {
+            padding: 0;
+            padding-inline: 0;
+            padding-block: 0;
+        }
+      
     }
 
     
