--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@ body {
 nav {
   display: flex;
   align-content: center;
+  align-items: center;
   justify-content: space-between;
+  padding: 1vh;
 }
 nav #logoNav {
   width: 10vw;
 }
 nav #searchContainer {
   border: 1px solid black;
+  border-radius: 7px;
+  height: 100%;
 }
 nav #searchContainer button, nav #searchContainer select {
   height: 100%;
@@ -22,9 +26,15 @@ nav #searchContainer input {
   padding-inline: 0;
   padding-block: 0;
 }
+nav i {
+  color: black;
+}
 
 .redButton {
   background-color: red;
+  color: white;
+}
+.redButton i {
   color: white;
 }
 
