--- a/style.scss
+++ b/style.scss
@@ -66,8 +66,9 @@ nav {
     flex-direction: row;
     flex-wrap: wrap;
     
-
+}
     .productcard {
+        
         padding: 20px;
         display: flex;
         flex-direction: column;
@@ -88,6 +89,3 @@ nav {
             border: none;
         }
     }
-
-
-
