--- a/style.scss
+++ b/style.scss
@@ -74,7 +74,7 @@ nav {
 
         img {
             max-width: 200px;
-            max-height: 305px;
+            height: 305px;
         }
 
         button {
