--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ nav {
   display: flex;
   align-content: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1vh;
 }
 nav #logoNav {
@@ -16,7 +16,7 @@ nav #logoNav {
 nav #searchContainer {
   border: 1px solid black;
   border-radius: 7px;
-  height: 100%;
+  height: 10vh;
 }
 nav #searchContainer button, nav #searchContainer select {
   height: 100%;
@@ -31,15 +31,16 @@ nav i {
 }
 
 .redButton {
-  background-color: red;
+  background-color: #ED1C24;
   color: white;
+  border: none;
 }
 .redButton i {
   color: white;
 }
 
 #banner {
-  background-color: red;
+  background-color: #ED1C24;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -92,10 +93,18 @@ nav i {
 #bookSection .productcard button {
   background-color: #ED1C24;
   color: white;
+  font-size: 20px;
   height: 48px;
-  padding: 0 32px 0 12px;
+  padding: 0 12px 0 12px;
   border-radius: 8px;
   font-weight: 600;
   width: 100%;
   border: none;
+}
+#bookSection .productcard button i {
+  color: white;
+}
+#bookSection .productcard i {
+  color: #f4ca3e;
+  height: 20px;
 }/*# sourceMappingURL=style.css.map */
